Task 6 : Revise pom.xml with lombok and define OpenApi